# explotty

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
icon_finder/: Cargo.toml
icon_finder/src/: lib.rs
src/: app.rs  config.rs  explorer_widget.rs  logging.rs  main.rs  parser.rs  terminal_buffer.rs  terminal_cell.rs  terminal_widget.rs  utils.rs
src/parser/: csi_sequence_handler.rs  dcs_sequence_handler.rs  dispatcher.rs  handler_context.rs  handlers.rs  sequence_handler.rs  sequence_token.rs  sequence_tokenizer.rs  sgr_sequence_handler.rs
src/parser/handlers/: csi_sequence_handler.rs  esc_sequence_handler.rs  osc_sequence_handler.rs  sgr_sequence_handler.rs  vt100_sequence_handler.rs
src/terminal_widget/: color.rs  input.rs  parser.rs  parser_csi.rs  parser_dcs.rs  parser_osc.rs  parser_sgr.rs  parser_vt100.rs  render.rs
