[package]
name = "explotty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
eframe = "0.32.0"
egui_extras = { version = "0.32.0", features = ["all_loaders"] }
env_logger = "0.11.8"
font-kit = "0.14.3"
log = "0.4.27"
open = "5.3.2"
portable-pty = "0.9.0"
walkdir = "2.5.0"
icon_finder = { path = "./icon_finder" }

[workspace]
members = [
    "icon_finder"
]
