[package]
name = "explotty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
eframe = "0.32"
egui_extras = { version = "0.32", features = ["all_loaders"] }
env_logger = "0.11"
font-kit = "0.14"
log = "0.4"
open = "5.3"
portable-pty = "0.9"
gio = "0.21"
gtk = "0.18"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
unicode-width = "0.2"
resvg = "0.45"

[features]
debug-outline = []
debug-logging = []
